force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <description>Represents an available time slot in a Clinic Schedule</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>