force-app/main/default/objects/Appointment__c/fields/Availability_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Availability_Loyalty__c</fullName>
    <formula>Capacity_Loyalty__c - Booked_Loyalty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Availability Loyalty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>