force-app/main/default/objects/Appointment__c/fields/Booked__c.field-meta.xml
<CustomField>
    <fullName>Booked__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Visits booked into this Appointment slot. Will be updated by the API for scheduling a Visit.</description>
    <label>Booked</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>