force-app/main/default/objects/Appointment__c/fields/Booked_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Booked_Loyalty__c</fullName>
    <label>Booked Loyalty</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>