force-app/main/default/objects/Appointment__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of Appointments available at a given time slot.</description>
    <label>Capacity</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>