force-app/main/default/objects/Appointment__c/fields/Capacity_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Loyalty__c</fullName>
    <description>Using the Custom Setting for percentage of overage, calculates the capacity for accommodating loyalty donors for a given Appointment slot</description>
    <formula>CEILING ( $Setup.Loyalty__c.Appointment_Capacity_Factor__c * Capacity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Using the Custom Setting for percentage of overage, calculates the capacity for accommodating loyalty donors for a given Appointment slot</inlineHelpText>
    <label>Capacity Loyalty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>