force-app/main/default/objects/Appointment__c/fields/Date_Center__c.field-meta.xml
<CustomField>
    <fullName>Date_Center__c</fullName>
    <description>Date of this appointment in the center&apos;s time zone.</description>
    <label>Date (Center)</label>
    <type>Date</type>
</CustomField>