force-app/main/default/objects/Appointment__c/fields/Day_of_Week_Num__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week_Num__c</fullName>
    <description>Day of the week enumerator (Sunday=1...Saturday=7)</description>
    <formula>CASE(WEEKDAY(  DATEVALUE(Datetime__c)  ), 
1, &quot;Sunday&quot;, 
2, &quot;Monday&quot;, 
3, &quot;Tuesday&quot;, 
4, &quot;Wednesday&quot;, 
5, &quot;Thursday&quot;, 
6, &quot;Friday&quot;, 
7, &quot;Saturday&quot;, 
&quot;Monday&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week Num</label>
    <type>Text</type>
</CustomField>