force-app/main/default/objects/Appointment__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration in minutes, set by the Schedule Template used to generate the Schedule</description>
    <label>Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>