force-app/main/default/objects/Appointment__c/fields/Time_Center__c.field-meta.xml
<CustomField>
    <fullName>Time_Center__c</fullName>
    <description>Time of this appointment in the center&apos;s time zone.</description>
    <label>Time (Center)</label>
    <type>Time</type>
</CustomField>