force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Schedule__c</columns>
    <columns>Datetime__c</columns>
    <columns>Capacity__c</columns>
    <columns>Booked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>